# payrollweb_jan2020

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  docker.yml  rustdoc.yml
cli/: Cargo.toml  build.rs
cli/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  service.rs
client/consensus/poa/: Cargo.toml
client/consensus/poa/benches/: benchmark.rs
client/consensus/poa/src/: chunk_proof.rs  inherent.rs  lib.rs  trie.rs  tx_proof.rs
client/datastore/: Cargo.toml
client/datastore/src/: lib.rs  tests.rs
client/rpc/: Cargo.toml
client/rpc-api/: Cargo.toml
client/rpc-api/src/: lib.rs
client/rpc-api/src/permastore/: error.rs  mod.rs
client/rpc/src/: lib.rs
client/rpc/src/permastore/: mod.rs  tests.rs
executor/: Cargo.toml
executor/src/: lib.rs
inspect/: Cargo.toml
inspect/src/: cli.rs  command.rs  lib.rs
pallets/permastore/: Cargo.toml
pallets/permastore/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/poa/: Cargo.toml
pallets/poa/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
primitives/: Cargo.toml
primitives/consensus/poa/: Cargo.toml
primitives/consensus/poa/src/: lib.rs
primitives/permastore/: Cargo.toml
primitives/permastore/src/: lib.rs
primitives/poa/: Cargo.toml
primitives/poa/src/: lib.rs
primitives/src/: lib.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/src/: constants.rs  impls.rs  lib.rs  voter_bags.rs
scripts/: pallet-weights-template.hbs  run_benches.sh
src/: main.rs
